# monte-carlo-option-pricing

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_black_scholes_european.py  02_variance_reduction_demo.py  03_heston_pricing_and_calibration.py  04_lsm_american.py
mc_option_pricing/: __init__.py  config.py  rng.py
mc_option_pricing/calibration/: __init__.py  base.py  calibration_engine.py  implied_vol.py
mc_option_pricing/diagnostics/: __init__.py  convergence.py
mc_option_pricing/models/: __init__.py  base.py  gbm.py  heston.py  merton.py
mc_option_pricing/payoffs/: __init__.py  asian.py  barrier.py  base.py  vanilla.py
mc_option_pricing/pricers/: __init__.py  base.py  european_mc.py  lsm_american.py
mc_option_pricing/utils/: __init__.py  black_scholes.py  checks.py  math.py
mc_option_pricing/variance_reduction/: __init__.py  antithetic.py  control_variate.py  qmc.py
tests/: test_bs_vs_closed_form.py  test_gbm_paths.py  test_heston_nonnegativity.py  test_lsm_american_put.py  test_properties.py  test_variance_reduction.py
